// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListingDetailsImageCard displays image card when no tag 1`] = `
<DocumentFragment>
  <header
    class="image-card--leader"
  >
    <span
      aria-hidden="false"
    >
      <div
        class="image-card"
      >
        <figure
          class="image-card__inner has-grid-layout has-3-images"
        >
          <img
            alt="This is a listing image"
            src="https://d31h23p2gsu1kr.cloudfront.net/images/listings/a0W0P00000GlKfBUAV-4d20089ed488fce1a695b73a8a4f090d.jpg"
          />
          <img
            alt="This is a second listing image"
            src="https://d31h23p2gsu1kr.cloudfront.net/images/listings/a0W0P00000GlKfBUAV-4d20089ed488fce1a695b73a8a4f090d.jpg"
          />
          <img
            alt="This is a third listing image"
            src="https://d31h23p2gsu1kr.cloudfront.net/images/listings/a0W0P00000GlKfBUAV-4d20089ed488fce1a695b73a8a4f090d.jpg"
          />
          <button
            aria-label="More Images"
            data-testid="open-modal-button"
          />
        </figure>
        <aside
          aria-label="A picture of the building Statuses"
        />
        <div
          class="image-card-tag__wrapper"
        />
      </div>
    </span>
    <div
      class="flex flex-col md:items-start md:text-left p-3 text-center"
    >
      <h1
        class="font-sans font-semibold text-2xl"
      >
        TEST Sale Listing (do not modify) - Homeownership Acres
      </h1>
      <p
        class="my-1"
      >
        <span>
          1 South Van Ness Ave, San Francisco, 
          <abbr
            class="no-underline"
            title="California"
          >
            CA
          </abbr>
           94103
        </span>
      </p>
      <div
        class="flex flex-col items-center md:flex-row md:justify-between md:w-full"
      >
        <div>
          <p
            class="text-gray-700"
          >
            Munoz, Carney and Clements
          </p>
          <p
            class="my-2"
          >
            <a
              aria-label="View on Map - Opens in a new window"
              href="https://www.google.com/maps/place/1%20South%20Van%20Ness%20Ave%2C%20San%20Francisco%2C%20CA%2094103"
              target="_blank"
            >
              View on Map
            </a>
          </p>
        </div>
        <a
          aria-label="Share this listing"
          class="share-button"
          href="/share/a0W0P00000GlKfBUAV"
          target="_blank"
        >
          <img
            alt="Share list view"
          />
        </a>
      </div>
    </div>
  </header>
</DocumentFragment>
`;

exports[`ListingDetailsImageCard displays tag when listing is habitat for humanity 1`] = `
<DocumentFragment>
  <header
    class="image-card--leader"
  >
    <span
      aria-hidden="false"
    >
      <div
        class="image-card"
      >
        <figure
          class="image-card__inner has-grid-layout has-3-images"
        >
          <img
            alt="This is a listing image"
            src="https://d31h23p2gsu1kr.cloudfront.net/images/listings/a0W0P00000GlKfBUAV-4d20089ed488fce1a695b73a8a4f090d.jpg"
          />
          <img
            alt="This is a second listing image"
            src="https://d31h23p2gsu1kr.cloudfront.net/images/listings/a0W0P00000GlKfBUAV-4d20089ed488fce1a695b73a8a4f090d.jpg"
          />
          <img
            alt="This is a third listing image"
            src="https://d31h23p2gsu1kr.cloudfront.net/images/listings/a0W0P00000GlKfBUAV-4d20089ed488fce1a695b73a8a4f090d.jpg"
          />
          <button
            aria-label="More Images"
            data-testid="open-modal-button"
          />
        </figure>
        <aside
          aria-label="A picture of the building Statuses"
        />
        <div
          class="image-card-tag__wrapper"
        >
          <span
            class="tag is-warning"
          >
            Habitat Greater San Francisco
          </span>
        </div>
      </div>
    </span>
    <div
      class="flex flex-col md:items-start md:text-left p-3 text-center"
    >
      <h1
        class="font-sans font-semibold text-2xl"
      >
        TEST: 36 Amber Drive
      </h1>
      <p
        class="my-1"
      >
        <span>
          36 Amber Drive, San Francisco, 
          <abbr
            class="no-underline"
            title="California"
          >
            CA
          </abbr>
           94131
        </span>
      </p>
      <div
        class="flex flex-col items-center md:flex-row md:justify-between md:w-full"
      >
        <div>
          <p
            class="text-gray-700"
          />
          <p
            class="my-2"
          >
            <a
              aria-label="View on Map - Opens in a new window"
              href="https://www.google.com/maps/place/36%20Amber%20Drive%2C%20San%20Francisco%2C%20CA%2094131"
              target="_blank"
            >
              View on Map
            </a>
          </p>
        </div>
        <a
          aria-label="Share this listing"
          class="share-button"
          href="/share/a0W8H000000HI2uUAG"
          target="_blank"
        >
          <img
            alt="Share list view"
          />
        </a>
      </div>
    </div>
  </header>
</DocumentFragment>
`;

exports[`ListingDetailsImageCard displays tag when rental listing is for educators 1`] = `
<DocumentFragment>
  <header
    class="image-card--leader"
  >
    <span
      aria-hidden="false"
    >
      <div
        class="image-card"
      >
        <figure
          class="image-card__inner has-grid-layout has-3-images"
        >
          <img
            alt="This is a listing image"
            src="https://sfmohcd.org/sites/default/files/Documents/MOH/Housing%20Listing%20Photos/test-apologies.png"
          />
          <img
            alt="This is a second listing image"
            src="https://sfmohcd.org/sites/default/files/Documents/MOH/Housing%20Listing%20Photos/test-apologies.png"
          />
          <img
            alt="This is a third listing image"
            src="https://sfmohcd.org/sites/default/files/Documents/MOH/Housing%20Listing%20Photos/test-apologies.png"
          />
          <button
            aria-label="More Images"
            data-testid="open-modal-button"
          />
        </figure>
        <aside
          aria-label="A picture of the building Statuses"
        />
        <div
          class="image-card-tag__wrapper"
        >
          <span
            class="tag is-warning"
          >
            SF public schools employee housing
          </span>
        </div>
      </div>
    </span>
    <div
      class="flex flex-col md:items-start md:text-left p-3 text-center"
    >
      <h1
        class="font-sans font-semibold text-2xl"
      >
        TEST Automated Listing (do not modify)
      </h1>
      <p
        class="my-1"
      />
      <div
        class="flex flex-col items-center md:flex-row md:justify-between md:w-full"
      >
        <div>
          <p
            class="text-gray-700"
          >
            King LLC
          </p>
          <p
            class="my-2"
          >
            <a
              aria-label="View on Map - Opens in a new window"
              href="https://www.google.com/maps/place/"
              target="_blank"
            >
              View on Map
            </a>
          </p>
        </div>
        <a
          aria-label="Share this listing"
          class="share-button"
          href="/share/a0W4U00000HnVLJUA3"
          target="_blank"
        >
          <img
            alt="Share list view"
          />
        </a>
      </div>
    </div>
  </header>
</DocumentFragment>
`;

exports[`ListingDetailsImageCard displays tag when sale listing is for educators 1`] = `
<DocumentFragment>
  <header
    class="image-card--leader"
  >
    <span
      aria-hidden="false"
    >
      <div
        class="image-card"
      >
        <figure
          class="image-card__inner has-grid-layout has-3-images"
        >
          <img
            alt="This is a listing image"
            src="https://d31h23p2gsu1kr.cloudfront.net/images/listings/a0W0P00000GlKfBUAV-4d20089ed488fce1a695b73a8a4f090d.jpg"
          />
          <img
            alt="This is a second listing image"
            src="https://d31h23p2gsu1kr.cloudfront.net/images/listings/a0W0P00000GlKfBUAV-4d20089ed488fce1a695b73a8a4f090d.jpg"
          />
          <img
            alt="This is a third listing image"
            src="https://d31h23p2gsu1kr.cloudfront.net/images/listings/a0W0P00000GlKfBUAV-4d20089ed488fce1a695b73a8a4f090d.jpg"
          />
          <button
            aria-label="More Images"
            data-testid="open-modal-button"
          />
        </figure>
        <aside
          aria-label="A picture of the building Statuses"
        />
        <div
          class="image-card-tag__wrapper"
        >
          <span
            class="tag is-warning"
          >
            SF public schools employee housing
          </span>
        </div>
      </div>
    </span>
    <div
      class="flex flex-col md:items-start md:text-left p-3 text-center"
    >
      <h1
        class="font-sans font-semibold text-2xl"
      >
        TEST: 36 Amber Drive
      </h1>
      <p
        class="my-1"
      >
        <span>
          36 Amber Drive, San Francisco, 
          <abbr
            class="no-underline"
            title="California"
          >
            CA
          </abbr>
           94131
        </span>
      </p>
      <div
        class="flex flex-col items-center md:flex-row md:justify-between md:w-full"
      >
        <div>
          <p
            class="text-gray-700"
          />
          <p
            class="my-2"
          >
            <a
              aria-label="View on Map - Opens in a new window"
              href="https://www.google.com/maps/place/36%20Amber%20Drive%2C%20San%20Francisco%2C%20CA%2094131"
              target="_blank"
            >
              View on Map
            </a>
          </p>
        </div>
        <a
          aria-label="Share this listing"
          class="share-button"
          href="/share/a0W8H000000HI2uUAG"
          target="_blank"
        >
          <img
            alt="Share list view"
          />
        </a>
      </div>
    </div>
  </header>
</DocumentFragment>
`;
